--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ assert_cmd = "2.0.14"
 clap = { version = "4.5.3", features = ["derive"] }
 human-panic = "1.2.3"
 predicates = "3.1.0"
+ureq = { version = "2.9.6", features = ["json"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
 
 [profile.release]
 strip = true
