--- a/deny.toml
+++ b/deny.toml
@@ -8,6 +8,23 @@ confidence-threshold = 0.95
 allow = [
     "Apache-2.0",
     "MIT",
-    "Unicode-DFS-2016"
+    "Unicode-DFS-2016",
+    "ISC",
+    "BSD-3-Clause",
+    "MPL-2.0",
+    "OpenSSL"
 ]
+
+
+[[licenses.clarify]]
+crate = "ring"
+# SPDX considers OpenSSL to encompass both the OpenSSL and SSLeay licenses
+# https://spdx.org/licenses/OpenSSL.html
+# ISC - Both BoringSSL and ring use this for their new files
+# MIT - "Files in third_party/ have their own licenses, as described therein. The MIT
+# license, for third_party/fiat, which, unlike other third_party directories, is
+# compiled into non-test libraries, is included below."
+# OpenSSL - Obviously
+expression = "ISC AND MIT AND OpenSSL"
+license-files = [{ path = "LICENSE", hash = 0xbd0eed23 }]
 
