--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ predicates = "3.1.0"
 ureq = { version = "2.9.6", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+walkdir = "2.5.0"
+sha256 = "1.5.0"
 
 [profile.release]
 strip = true
