Disables renovate updates for Gradle wrappers

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -23,6 +23,10 @@
                 "custom.regex"
             ],
             "commitMessageTopic": "rust"
+        },
+        {
+            "matchManagers": [ "gradle-wrapper"],
+            "enabled": false
         }
     ],
     "customManagers": [
