--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "gwv"
 version = "0.1.0"
 edition = "2021"
 authors = ["ubiratan.f.soares@gmail.com"]
-description = "An opinionated way to kick-off CLI apps powered by Rust"
+description = "A validator for gradle/wrapper jar binaries, intended to be used in CI pipelines"
 repository = "https://github.com/dotanuki-labs/gwv"
 readme = "README.md"
 license = "MIT"
