--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 authors = ["ubiratan.f.soares@gmail.com"]
 description = "A validator for gradle/wrapper jar binaries, intended to be used in CI pipelines"
-repository = "https://github.com/dotanuki-labs/gwv"
+repository = "https://github.com/dotanuki-labs/gradle-wrapper-validator"
 readme = "README.md"
 license = "MIT"
-publish = false
+publish = true
 
 [dependencies]
 anyhow = "1.0.81"
