Re-enables publishing on crates.io

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,8 +32,8 @@ jobs:
         id: prepare-release
         run: ./scripts/prepare-release.sh
 
-#      - name: Publish on crates.io
-#        run: cargo publish --token ${{ secrets.CRATESIO_PUBLISH_TOKEN }}
+      - name: Publish on crates.io
+        run: cargo publish --token ${{ secrets.CRATESIO_PUBLISH_TOKEN }}
 
       - name: Publish draft Github release
         uses: softprops/action-gh-release@9d7c94cfd0a1f3ed45544c887983e9fa900f0564 # v2.0.4
