--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,15 +12,17 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 anyhow = "1.0.81"
-assert_cmd = "2.0.14"
 clap = { version = "4.5.4", features = ["derive"] }
 human-panic = "1.2.3"
-predicates = "3.1.0"
 ureq = { version = "2.9.6", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 walkdir = "2.5.0"
 sha256 = "1.5.0"
+
+[dev-dependencies]
+assert_cmd = "2.0.14"
+predicates = "3.1.0"
 
 [[bin]]
 name = "gwv"
