--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,9 @@ jobs:
       - name: Check supply-chain issues
         run: just supply-chain-checks
 
+      - name: Check MSRV
+        run: just msrv-check
+
       - name: Build against all supported targets
         run: just cross-build
 
