Revert "Unblocks CI by ignoring non-impact Security warning (#55)"
This reverts commit 25347bcbb0a628932cade8ea93489270a5ef33b0.

--- a/deny.toml
+++ b/deny.toml
@@ -1,8 +1,6 @@
 [advisories]
 ignore = [
-    # Already patched, no impact on this project
-    # https://github.com/algesten/ureq/pull/748
-    "RUSTSEC-2024-0336",
+    # No advisories so far!
 ]
 
 [licenses]
@@ -14,7 +12,7 @@ allow = [
     "ISC",
     "BSD-3-Clause",
     "MPL-2.0",
-    "OpenSSL",
+    "OpenSSL"
 ]
 
 
@@ -22,4 +20,7 @@ allow = [
 [[licenses.clarify]]
 name = "ring"
 expression = "MIT AND ISC AND OpenSSL"
-license-files = [{ path = "LICENSE", hash = 0xbd0eed23 }]
+license-files = [
+    { path = "LICENSE", hash = 0xbd0eed23 }
+]
+
