--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,10 +13,11 @@ jobs:
       - name: Project Checkout
         uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
 
-      - name: Install additional tools
-        run: |
-          sudo snap install --edge --classic just
-          sudo snap install zig --classic --beta && zig version
+      - name: Install asdf
+        uses: asdf-vm/actions/setup@05e0d2ed97b598bfce82fd30daf324ae0c4570e6 # v3.0.2
+
+      - name: Install required tooling
+        run: ./scripts/install-requirements.sh
 
       - name: Setup Rust and Cargo plugins
         run: just setup
