Updates CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,25 +10,34 @@ on:
       - main
 
 jobs:
-  essential-checks:
+  docs:
     runs-on: ubuntu-22.04
     steps:
       - name: Project Checkout
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
 
-      - name: Run essential checks
-        uses: dotanuki-labs/github-actions/essentials@main
+      - name: Check typos on source files
+        uses: dotanuki-labs/github-actions/quality/typos@main
+
+      - name: Lint Markdown files
+        uses: dotanuki-labs/github-actions/quality/markdown@main
+
+      - name: Check MIT license on source files
+        uses: dotanuki-labs/github-actions/foss/check-licenses@main
         with:
           file-patterns: "*.sh,*.rs,*.yml"
           license: "mit"
 
   build:
     runs-on: ubuntu-22.04
-    needs: essential-checks
+    needs: docs
 
     steps:
       - name: Project Checkout
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+
+      - name: Lint Bash scripts
+        uses: dotanuki-labs/github-actions/quality/bash@main
 
       - name: Setup CI caching
         uses: Swatinem/rust-cache@23bce251a8cd2ffc3c1075eaa2367cf899916d84 # v2.7.3
