--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,36 +6,55 @@ name: CD
 on: workflow_dispatch
 
 jobs:
-  publish:
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ 'ubuntu-22.04', 'macos-14' ]
+
+    steps:
+      - name: Project Checkout
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+
+      - name: Setup CI
+        uses: ./.github/actions/setup-rust
+
+      - name: Cross-compilation supported targets
+        run: just assemble
+
+      - name: Archive binaries
+        uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
+        with:
+          name: gwv-binaries-${{ runner.os }}
+          path: target/ci
+
+  release:
+    needs: build
     runs-on: ubuntu-22.04
 
     steps:
       - name: Project Checkout
-        uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
-      - name: Install asdf
-        uses: asdf-vm/actions/setup@05e0d2ed97b598bfce82fd30daf324ae0c4570e6 # v3.0.2
+      - name: Setup CI
+        uses: ./.github/actions/setup-rust
 
-      - name: Install required tooling
-        run: ./scripts/install-requirements.sh
-
-      - name: Setup Rust and Cargo plugins
-        run: just setup
+      - name: Publish on crates.io
+        run: cargo publish --token ${{ secrets.CRATESIO_PUBLISH_TOKEN }}
 
       - name: Check supply-chain issues
         run: just security
 
-      - name: Build against all supported targets
-        run: just assemble
+      - name: Fetch executable from previous build
+        uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
+        with:
+          path: artifacts
 
       - name: Prepare to release
         id: prepare-release
         run: ./scripts/prepare-release.sh
 
-      - name: Publish on crates.io
-        run: cargo publish --token ${{ secrets.CRATESIO_PUBLISH_TOKEN }}
-
-      - name: Publish draft Github release
+      - name: Publish draft release on Github
         uses: softprops/action-gh-release@69320dbe05506a9a39fc8ae11030b214ec2d1f87 # v2.0.5
         with:
           name: ${{ steps.prepare-release.outputs.version }}
@@ -44,5 +63,5 @@ jobs:
           generate_release_notes: true
           draft: true
           files: |
-            target/ci/**/*
+            artifacts/**/*
             gwv.cdx.json
