--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -16,7 +16,7 @@
             "description": [
                 "Rust"
             ],
-            "matchPackageNames": [
+            "matchDepNames": [
                 "rust"
             ],
             "matchManagers": [
