--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -44,64 +44,12 @@
         },
         {
             "customType": "regex",
-            "depNameTemplate": "cargo-nextest",
-            "packageNameTemplate": "nextest-rs/nextest",
-            "datasourceTemplate": "github-releases",
-            "extractVersionTemplate": "^cargo-nextest-(?<version>.*)$",
-            "fileMatch": [
-                "(^|/)cargo-plugins\\.toml"
-            ],
+            "datasourceTemplate": "git-refs",
+            "currentValueTemplate": "main",
+            "packageNameTemplate": "https://github.com/dotanuki-labs/callinectes",
+            "fileMatch": ["(^|/)krabby\\.sh$"],
             "matchStrings": [
-                "cargo-nextest\\s*=\\s*\"(?<currentValue>\\d+\\.\\d+(\\.\\d+)?)\""
-            ]
-        },
-        {
-            "customType": "regex",
-            "depNameTemplate": "cargo-cyclonedx",
-            "packageNameTemplate": "CycloneDX/cyclonedx-rust-cargo",
-            "datasourceTemplate": "github-releases",
-            "extractVersionTemplate": "^cargo-cyclonedx-(?<version>.*)$",
-            "fileMatch": [
-                "(^|/)cargo-plugins\\.toml"
-            ],
-            "matchStrings": [
-                "cargo-cyclonedx\\s*=\\s*\"(?<currentValue>\\d+\\.\\d+(\\.\\d+)?)\""
-            ]
-        },
-        {
-            "customType": "regex",
-            "depNameTemplate": "cargo-msrv",
-            "packageNameTemplate": "foresterre/cargo-msrv",
-            "datasourceTemplate": "github-releases",
-            "fileMatch": [
-                "(^|/)cargo-plugins\\.toml"
-            ],
-            "matchStrings": [
-                "cargo-msrv\\s*=\\s*\"(?<currentValue>\\d+\\.\\d+(\\.\\d+)?)\""
-            ]
-        },
-        {
-            "customType": "regex",
-            "depNameTemplate": "cargo-deny",
-            "packageNameTemplate": "EmbarkStudios/cargo-deny",
-            "datasourceTemplate": "github-releases",
-            "fileMatch": [
-                "(^|/)cargo-plugins\\.toml"
-            ],
-            "matchStrings": [
-                "cargo-deny\\s*=\\s*\"(?<currentValue>\\d+\\.\\d+(\\.\\d+)?)\""
-            ]
-        },
-        {
-            "customType": "regex",
-            "depNameTemplate": "cargo-get",
-            "packageNameTemplate": "nicolaiunrein/cargo-get",
-            "datasourceTemplate": "github-releases",
-            "fileMatch": [
-                "(^|/)cargo-plugins\\.toml"
-            ],
-            "matchStrings": [
-                "cargo-get\\s*=\\s*\"(?<currentValue>\\d+\\.\\d+(\\.\\d+)?)\""
+                "readonly callinectes=\"ghcr.io/dotanuki-labs/callinectes:(?<currentDigest>.*?)\""
             ]
         }
     ]
