--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,7 +20,7 @@ jobs:
         uses: ./.github/actions/setup-rust
 
       - name: Cross-compilation supported targets
-        run: just assemble
+        run: ./krabby.sh assemble
 
       - name: Archive binaries
         uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
@@ -36,14 +36,11 @@ jobs:
       - name: Project Checkout
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
-      - name: Setup CI
-        uses: ./.github/actions/setup-rust
-
       - name: Publish on crates.io
         run: cargo publish --token ${{ secrets.CRATESIO_PUBLISH_TOKEN }}
 
       - name: Check supply-chain issues
-        run: just security
+        run: ./krabby.sh security
 
       - name: Fetch executable from previous build
         uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
@@ -52,7 +49,9 @@ jobs:
 
       - name: Prepare to release
         id: prepare-release
-        run: ./scripts/prepare-release.sh
+        run: |
+          version=$(grep 'version' Cargo.toml | head -1 | sed "s/version[[:space:]]=[[:space:]]//g" | tr -d '"')
+          echo "version=$version" >>"$GITHUB_OUTPUT"
 
       - name: Publish draft release on Github
         uses: softprops/action-gh-release@a74c6b72af54cfa997e81df42d94703d6313a2d0 # v2.0.6
