--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/upload-artifact@0b2256b8c012f0828dc542b3febcab082c67f72b # v4.3.4
         with:
           name: gwv-binaries-${{ runner.os }}
-          path: target/ci
+          path: artifacts
 
   security:
     runs-on: ubuntu-22.04
