--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Publish on crates.io
         run: cargo publish --token ${{ secrets.CRATESIO_PUBLISH_TOKEN }}
 
-      - name: Check supply-chain issues
-        run: ./krabby.sh security
+      - name: Generate SBOM
+        run: ./krabby.sh sbom
 
       - name: Fetch executable from previous build
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
