--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,9 @@ jobs:
       - name: Check supply-chain issues
         run: ./krabby.sh security
 
+      - name: Generate SBOM
+        run: ./krabby.sh sbom
+
       - name: Archive SBOM
         uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4.4.0
         with:
