--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,25 +8,20 @@
     ],
     "osvVulnerabilityAlerts": true,
     "dependencyDashboard": true,
-    "labels": [
-        "dependencies"
-    ],
+    "labels": ["dependencies"],
     "packageRules": [
         {
-            "description": [
-                "Rust"
-            ],
-            "matchDepNames": [
-                "rust"
-            ],
-            "matchManagers": [
-                "custom.regex"
-            ],
+            "description": ["Rust"],
+            "matchDepNames": ["rust"],
+            "matchManagers": ["custom.regex"],
             "commitMessageTopic": "rust"
         },
         {
-            "matchManagers": [ "gradle-wrapper"],
-            "enabled": false
+            "matchDatasources": ["docker"],
+            "matchDepNames": ["dotanuki-labs/callinectes"],
+            "matchPackageNames": ["docker.io/dotanuki-labs/callinectes"],
+            "replacementName": "ghcr.io/dotanuki-labs/callinectes",
+            "matchManagers": ["custom.regex" ]
         }
     ],
     "customManagers": [
@@ -35,22 +30,21 @@
             "depNameTemplate": "rust",
             "packageNameTemplate": "rust-lang/rust",
             "datasourceTemplate": "github-releases",
-            "fileMatch": [
-                "(^|/)rust-toolchain\\.toml$"
-            ],
+            "fileMatch": ["(^|/)rust-toolchain\\.toml$"],
             "matchStrings": [
                 "channel\\s*=\\s*\"(?<currentValue>\\d+\\.\\d+(\\.\\d+)?)\""
             ]
         },
         {
             "customType": "regex",
-            "datasourceTemplate": "git-refs",
-            "currentValueTemplate": "main",
+            "datasourceTemplate": "docker",
+            "currentValueTemplate": "latest",
+            "registryUrlTemplate": "https://ghcr.io",
             "depNameTemplate": "dotanuki-labs/callinectes",
-            "packageNameTemplate": "https://github.com/dotanuki-labs/callinectes",
-            "fileMatch": ["(^|/)krabby\\.sh$"],
+            "packageNameTemplate": "dotanuki-labs/callinectes",
+            "fileMatch": [ "(^|/)krabby\\.sh$"],
             "matchStrings": [
-                "readonly callinectes=\"ghcr.io/dotanuki-labs/callinectes:(?<currentDigest>.*?)\""
+                "readonly callinectes=\"ghcr.io/dotanuki-labs/callinectes:(?<currentValue>.*)@(?<currentDigest>sha256:[a-f0-9]+)\""
             ]
         }
     ]
