Allowing unicode-3.0 license

--- a/deny.toml
+++ b/deny.toml
@@ -9,6 +9,7 @@ allow = [
     "Apache-2.0",
     "MIT",
     "Unicode-DFS-2016",
+    "Unicode-3.0",
     "ISC",
     "BSD-3-Clause",
     "MPL-2.0",
