--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Check typos on source files
         uses: dotanuki-labs/github-actions/quality/typos@main
 
-      - name: Lint Markdown files
-        uses: dotanuki-labs/github-actions/quality/markdown@main
+#      - name: Lint Markdown files
+#        uses: dotanuki-labs/github-actions/quality/markdown@main
 
       - name: Check MIT license on source files
         uses: dotanuki-labs/github-actions/foss/check-licenses@main
@@ -64,7 +64,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ 'ubuntu-22.04', 'macos-14' ]
+        os: [ 'ubuntu-24.04', 'macos-15' ]
 
     steps:
       - name: Project Checkout
