--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Check typos on source files
         uses: dotanuki-labs/github-actions/quality/typos@main
 
-#      - name: Lint Markdown files
-#        uses: dotanuki-labs/github-actions/quality/markdown@main
+      - name: Lint Markdown files
+        uses: dotanuki-labs/github-actions/quality/markdown@main
 
       - name: Check MIT license on source files
         uses: dotanuki-labs/github-actions/foss/check-licenses@main
