feat(infra): tweaks cd workflows for docker deploys

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Build and run with Docker
-        run: ./krabby.sh docker
+        run: ./krabby.sh docker-build
 
   security:
     runs-on: ubuntu-24.04
