--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -23,13 +23,15 @@ jobs:
 
       - name: Compute release version
         id: prepare-release
-        run: ./krabby.sh prepare-release
+        run: ./krabby.sh prepare-docker-release
 
       - name: Docker metadata
         id: docker-metadata
         uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: ghcr.io/gwv
+          labels: org.opencontainers.image.title=gwv
+          annotations: org.opencontainers.image.title=gwv
 
       - name: Set up docker-buildx
         uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
@@ -47,11 +49,11 @@ jobs:
         with:
           push: true
           provenance: false
-          platforms: linux/${{ steps.docker-env.outputs.platform }}
+          platforms: linux/${{ steps.prepare-release.outputs.platform }}
           labels: ${{ steps.docker-metadata.outputs.labels }}
           annotations: ${{ steps.docker-metadata.outputs.annotations }}
           outputs: type=registry,push=true
-          tags: ghcr.io/${{ github.repository }}:${{ steps.prepare-release.outputs.version }}-${{ steps.docker-env.outputs.platform }}
+          tags: ghcr.io/gwv:${{ steps.prepare-release.outputs.version }}-${{ steps.prepare-release.outputs.platform }}
 
   merge-manifests:
     runs-on: ubuntu-24.04
@@ -63,7 +65,7 @@ jobs:
 
       - name: Compute release version
         id: prepare-release
-        run: ./krabby.sh prepare-release
+        run: ./krabby.sh prepare-docker-release
 
       - name: Log in to Github Container Registry
         uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
