--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -29,9 +29,7 @@ jobs:
         id: docker-metadata
         uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5
         with:
-          images: ghcr.io/gwv
-          labels: org.opencontainers.image.title=gwv
-          annotations: org.opencontainers.image.title=gwv
+          images: ghcr.io/${{ github.repository }}
 
       - name: Set up docker-buildx
         uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
@@ -53,7 +51,7 @@ jobs:
           labels: ${{ steps.docker-metadata.outputs.labels }}
           annotations: ${{ steps.docker-metadata.outputs.annotations }}
           outputs: type=registry,push=true
-          tags: ghcr.io/gwv:${{ steps.prepare-release.outputs.version }}-${{ steps.prepare-release.outputs.platform }}
+          tags: ghcr.io/${{ github.repository }}:${{ steps.prepare-release.outputs.version }}-${{ steps.prepare-release.outputs.platform }}
 
   merge-manifests:
     runs-on: ubuntu-24.04
