--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,11 +7,12 @@ on: workflow_dispatch
 
 permissions:
   id-token: write
+  packages: write
   contents: read
   attestations: write
 
 jobs:
-  build:
+  build-binaries:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -33,8 +34,8 @@ jobs:
           name: gwv-binaries-${{ runner.os }}
           path: artifacts
 
-  release:
-    needs: build
+  publish-github-relese:
+    needs: build-binaries
     runs-on: ubuntu-24.04
 
     steps:
@@ -43,9 +44,6 @@ jobs:
 
       - name: Setup CI
         uses: ./.github/actions/setup-rust
-
-      - name: Publish on crates.io
-        run: cargo publish --token ${{ secrets.CRATESIO_PUBLISH_TOKEN }}
 
       - name: Generate SBOM
         run: ./krabby.sh sbom
@@ -62,7 +60,7 @@ jobs:
 
       - name: Prepare Github release
         id: prepare-release
-        run: ./krabby.sh prepare-release
+        run: ./krabby.sh prepare-github-release
 
       - name: Publish draft release on Github
         uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631 # v2.2.2
@@ -75,3 +73,81 @@ jobs:
           files: |
             artifacts/**/*
             gwv.cdx.json
+
+  publish-crate:
+    needs: build
+    runs-on: ubuntu-24.04
+
+    steps:
+      - name: Project Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Setup CI
+        uses: ./.github/actions/setup-rust
+
+      - name: Publish on crates.io
+        run: cargo publish --token ${{ secrets.CRATESIO_PUBLISH_TOKEN }}
+
+  push-docker-images:
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      matrix:
+        runner: ["ubuntu-24.04", "ubuntu-24.04-arm"]
+
+    steps:
+      - name: Project Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Compute release version
+        id: prepare-release
+        run: ./krabby.sh prepare-docker-release
+
+      - name: Docker metadata
+        id: docker-metadata
+        uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5
+        with:
+          images: ghcr.io/${{ github.repository }}
+
+      - name: Set up docker-buildx
+        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
+
+      - name: Log in to Github Container Registry
+        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build container Image
+        id: build
+        uses: docker/build-push-action@1dc73863535b631f98b2378be8619f83b136f4a0 # v6.17.0
+        with:
+          push: true
+          provenance: false
+          platforms: linux/${{ steps.prepare-release.outputs.platform }}
+          labels: ${{ steps.docker-metadata.outputs.labels }}
+          annotations: ${{ steps.docker-metadata.outputs.annotations }}
+          outputs: type=registry,push=true
+          tags: ghcr.io/${{ github.repository }}:${{ steps.prepare-release.outputs.version }}-${{ steps.prepare-release.outputs.platform }}
+
+  publish-multiarch-docker-image:
+    runs-on: ubuntu-24.04
+    needs: push-docker-images
+
+    steps:
+      - name: Project Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Compute release version
+        id: prepare-release
+        run: ./krabby.sh prepare-docker-release
+
+      - name: Log in to Github Container Registry
+        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Update Docker manifest
+        run: ./krabby.sh docker-manifest ${{ steps.prepare-release.outputs.version }}
