--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -14,3 +14,17 @@ rustflags = [
 
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
+
+[target.x86_64-unknown-linux-musl]
+linker = "clang"
+rustflags = [
+    "-C",
+    "target-feature=+crt-static"
+]
+
+[target.aarch64-unknown-linux-musl]
+linker = "clang"
+rustflags = [
+    "-C",
+    "target-feature=+crt-static",
+]
