--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,22 @@ jobs:
           name: gwv-binaries-${{ runner.os }}
           path: artifacts
 
+  check-rust-binaries:
+    needs: build-rust
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Project Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Fetch executable from previous build
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
+        with:
+          path: artifacts
+          pattern: gwv-binaries-*
+
+      - name: Test binary
+        run: ./gwv-binaries-ubuntu-24.04/gwv-x86_64-unknown-linux-musl --help
+
   build-docker:
     needs: check-docs
     runs-on: ${{ matrix.os }}
@@ -98,7 +114,7 @@ jobs:
 
   security:
     runs-on: ubuntu-24.04
-    needs: [lint, tests, build-rust, build-docker]
+    needs: [lint, tests, check-rust-binaries, build-docker]
 
     steps:
       - name: Project Checkout
