chores(deps): ensure pinning for all deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,13 @@ keywords = ["supply-chain", "android", "gradle", "ci", "devops"]
 msrv = "1.82.0"
 
 [dependencies]
-anyhow = "1.0.82"
-clap = { version = "4.5.4", features = ["derive"] }
-human-panic = "2.0.0"
-serde = { version = "1.0.200", features = ["derive"] }
-walkdir = "2.5.0"
-sha256 = "1.5.0"
-reqwest = { version = "0.12.9", default-features = false, features = ["json", "blocking", "rustls-tls"] }
+anyhow = "=1.0.82"
+clap = { version = "=4.5.4", features = ["derive"] }
+human-panic = "=2.0.0"
+serde = { version = "=1.0.200", features = ["derive"] }
+walkdir = "=2.5.0"
+sha256 = "=1.5.0"
+reqwest = { version = "=0.12.9", default-features = false, features = ["json", "blocking", "rustls-tls"] }
 
 [dev-dependencies]
 assert_cmd = "=2.0.17"
