feat(build): support standalone linux binaries

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -12,5 +12,10 @@ rustflags = [
     "-Wrust_2018_idioms",
 ]
 
-[target.aarch64-unknown-linux-gnu]
+[target.x86_64-unknown-linux-musl]
+linker = "rust-lld"
+rustflags = ["-Ctarget-feature=+crt-static"]
+
+[target.aarch64-unknown-linux-musl]
 linker = "aarch64-linux-gnu-gcc"
+rustflags = ["-Ctarget-feature=+crt-static"]
