--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "gwv"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2024"
-authors = ["ubiratan.f.soares@gmail.com"]
+authors = ["dotanuki.labs@gmail.com"]
 description = "A validator for gradle/wrapper jar binaries, intended to be used in CI pipelines"
 repository = "https://github.com/dotanuki-labs/gradle-wrapper-validator"
 readme = "README.md"
