--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Check MIT license on source files
         uses: dotanuki-labs/github-actions/foss/check-licenses@main
         with:
-          file-patterns: '*.sh,*.rs,*.yml'
-          license: 'mit'
+          file-patterns: "*.sh,*.rs,*.yml"
+          license: "mit"
 
       - name: Build documentation assets
         uses: dotanuki-labs/github-actions/foss/prepare-ghpages@main
@@ -67,7 +67,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ 'ubuntu-24.04', 'macos-15' ]
+        os: ["ubuntu-24.04", "macos-15"]
 
     steps:
       - name: Project Checkout
@@ -87,24 +87,28 @@ jobs:
 
   build-docker:
     needs: check-docs
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ 'ubuntu-24.04', 'ubuntu-24.04-arm' ]
+    runs-on: ubuntu-24.04
 
     steps:
       - name: Project Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-      - name: Build and run with Docker
-        run: ./krabby.sh docker-build
+      - name: Setup Docker buildx
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
+
+      - name: Build Docker image
+        uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
+        with:
+          context: .
+          push: false
+          tags: "dotanuki-labs/gwv:latest"
 
   compatibility-tests:
     needs: build-rust
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-22.04, macos-13 ]
+        os: [ubuntu-22.04, macos-13]
 
     steps:
       - name: Project Checkout
