--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,6 +118,7 @@ jobs:
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
         with:
           path: artifacts
+          pattern: gwv-binaries-*
 
       - name: Compatibility check (macOS)
         if: ${{ runner.os == 'macOS'}}
