feat(compliance): update copyrights

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-# Copyright 2024 Dotanuki Labs
+# Copyright 2025 Dotanuki Labs
 # SPDX-License-Identifier: MIT
 
 name: CI
@@ -26,10 +26,7 @@ jobs:
         uses: dotanuki-labs/github-actions/quality/markdown@main
 
       - name: Check MIT license on source files
-        uses: dotanuki-labs/github-actions/foss/check-licenses@main
-        with:
-          file-patterns: "*.sh,*.rs,*.yml"
-          license: "mit"
+        uses: korandoru/hawkeye@2f80559b06187bcd1aa7bca5138fe5e5c53e275f # v6.3.0
 
       - name: Build documentation assets
         uses: dotanuki-labs/github-actions/foss/prepare-ghpages@main
