feat(deps): adopt renovate cooldowns

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,6 +11,8 @@
     },
     "osvVulnerabilityAlerts": true,
     "dependencyDashboard": true,
+    "minimumReleaseAge": "7 days",
+    "internalChecksFilter": "strict",
     "labels": [
         "dependencies"
     ],
