--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,9 @@ human-panic = "=2.0.4"
 serde = { version = "=1.0.228", features = ["derive"] }
 walkdir = "=2.5.0"
 sha256 = "=1.6.0"
-reqwest = { version = "=0.12.25", default-features = false, features = ["json", "rustls-tls"] }
-reqwest-middleware = "0.4.2"
-reqwest-retry = "0.8.0"
+reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
+reqwest-middleware = "=0.4.2"
+reqwest-retry = "=0.8.0"
 tokio = { version = "=1.48.0", features = ["full"] }
 
 [dev-dependencies]
