--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,9 @@ human-panic = "=2.0.6"
 serde = { version = "=1.0.228", features = ["derive"] }
 walkdir = "=2.5.0"
 sha256 = "=1.6.0"
-reqwest = { version = "=0.13.1", default-features = false, features = ["json", "rustls-tls"] }
-reqwest-middleware = "=0.4.2"
-reqwest-retry = "=0.8.0"
+reqwest = { version = "=0.13.1", features = ["json"] }
+reqwest-middleware = "=0.5.0"
+reqwest-retry = "=0.9.0"
 tokio = { version = "=1.49.0", features = ["full"] }
 
 [dev-dependencies]
