--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -20,5 +20,5 @@ linker = "rust-lld"
 rustflags = ["-Ctarget-feature=+crt-static"]
 
 [target.aarch64-unknown-linux-musl]
-linker = "aarch64-linux-gnu-gcc"
+linker = "rust-lld"
 rustflags = ["-Ctarget-feature=+crt-static"]
